tests/errors/fsm-trig-too-long.fil
component main<T>(
  @interface<T, 4> go_T: 1,
) -> () {
  fsm t[5](go_T);
}
